--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "game_of_life"
 version = "0.1.0"
-authors = ["kmingalls2018"]
+authors = ["kevbot18"]
 build = "build.rs"
 
 [dependencies]
